# session-sync

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  discover.rs  e2e_tests.rs  error.rs  id.rs  ir.rs  loss.rs  main.rs
src/readers/: claude.rs  mod.rs  opencode.rs  vscode.rs
src/writers/: claude.rs  mod.rs  opencode.rs  vscode.rs
