[package]
name = "session-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "session-sync"
path = "src/main.rs"

[dependencies]
clap        = { version = "4",    features = ["derive", "color"] }
anyhow      = "1"
thiserror   = "2"
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
rusqlite    = { version = "0.32", features = ["bundled"] }
uuid        = { version = "1",    features = ["v4"] }
rand        = "0.8"
chrono      = { version = "0.4",  features = ["serde"] }
inquire     = "0.7"
dirs        = "5"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
